# pem-fc-ampc

./: .gitignore  README.md  pyproject.toml  setup.py
examples/fuel_cell/: Fuel_Cell_AMPC.ipynb  test_suh_mpc.py
examples/fuel_cell/model/: __init__.py  script_sim_suh.py  script_sim_suh_scaled.py
examples/fuel_cell/model/model_src/: model_acados.py
examples/fuel_cell/model/model_src/model_suh/: conversions.py  model_suh.py
examples/fuel_cell/model/model_src/ode_modelling/: model_helper.py  ode_model.py  simresult.py  simulator.py
examples/fuel_cell/mpc/: __init__.py  suh_mpc_acados.py  suh_mpc_data.py  suh_mpc_param.py  suh_nh_mpc_acados.py  utils.py
neural_horizon_acados/data_generation/: __init__.py  data_generation.py  data_generation_acados.py
neural_horizon_acados/mpc/: __init__.py  mpc_classes.py  mpc_classes_acados.py  mpc_dataclass.py
neural_horizon_acados/neural_horizon/: __init__.py  neural_horizon.py  neural_network.py
neural_horizon_acados/parameters/: __init__.py  dataset_param.py  model_param.py  mpc_param.py  neural_network_param.py  nh_mpc_param.py
neural_horizon_acados/plotting/: __init__.py  analysis_plots.py  bokeh_saving.py  mpc_result_plot.py  plot_utils.py
neural_horizon_acados/pruning/: __init__.py  global_pruning.py  iter_pruning.py  prun_dataclasses.py  prun_utils.py  structured_pruning.py  unstructured_pruning.py
neural_horizon_acados/utils/: __init__.py  decorators.py  errors.py  means.py  torch_utils.py  utils.py
