[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"
python-requires = ">=3.11"

[project]
name = "neural_horizon_acados"
version = "0.1"
description = "Neural Horizon"
authors = [
    {name = "Josua Christoph Lindemann", email = "josuachristoph.lindemann@stud.tu-darmstadt.de" }
]
dependencies = [
    "tqdm",
    "numpy",
    "pandas",
    "casadi",
    "scipy",
    "torch",
    "bokeh",
    "selenium",
    "ipywidgets",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
acados = ["acados_template"]

[tool.setuptools]
packages = {find = { where = ["./"] }}